phpmd-0.2.6 (2010/07/03)
========================

- Implemented #24: Implement Depth Of Inheritance Rule. Implemented in
  svn revision #253.
- Implemented #25: Implement Number of Children Rule. Implemented in svn
  revision #252.
- Implemented #26: Implement Rule that detects the usage of PHP's eval()
  function. Implemented in svn revision #251.
- Implemented #27: Implement Rule that detects the usage of PHP's exit()
  expression. Implemented in svn revision #250.
- Fixed #28: Unused local variable and unused parameter rule produces
  false positives. Fixed in svn revision #245.
- Implemented #30: New option --version added to PHPMD's command line
  interface. Implemented in svn revision #246.
- Names of several command line options unified with PHPUnit and PHPCPD.
  The --ignore option is now --exclude and --extensions is now --suffixes.

phpmd-0.2.5 (2010/04/03)
========================

- Implemented #12: Add rule for the Weighted Methods Per Class Metric.
  Implemented in svn revision #228.
- Fixed #16: Alternative syntax for properties in rule set files
  implemented. Fixed in svn revision #220
- Fixed #17: Do not return success exit code when PHPMD detects rule
  violations in analyzed source code. Fixed in svn revision #226.
- Fixed #19: Super globals were detected as unused variables.Fixed in
  svn revision #218
- Fixed #20: Local static variables were treated as unused variables.
  Fixed in svn revision #219.

phpmd-0.2.4 (2010/03/08)
========================

- E_NOTICE bug fix in naming rule.

phpmd-0.2.3 (2010/03/04)
========================

- Fixed #6: PHP Tokenizer required but no error when installing.
- Fixed #7: UnusedLocalVariable ruleset incorrectly flags variables
  as unused when used inside double quoted string. Fixed in svn
  revision #187.
- Implemented #9: Add support for "Suppress warnings" annotations.
  Implemented in svn revision #200.
- Implemented #10: Support for exclude element in rule-set files added.