@@ -1,3 +1,9 @@
+phpmd-0.2.7 (2010/  /  )
+========================
+
+- Fixed #33: PEAR package.xml does not @php_bin@ and @bin_dir@ on
+  phpmd.bat. Fixed in svn revision #264.
+
 phpmd-0.2.6 (2010/07/03)
 ========================
 
